--- a/src/Component/Experience/Experience.css
+++ b/src/Component/Experience/Experience.css
@@ -1,8 +1,7 @@
 .experience {
-  padding: 0 2rem;
+  padding: 2rem 2rem;
   background: #0a192f;
   color: #e6f1ff;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
